--- a/pages/input/inputevaluate/inputevaluate.wxml
+++ b/pages/input/inputevaluate/inputevaluate.wxml
@@ -2,7 +2,8 @@
 <view class='container'>
   <view class='item' bindtap='drink'>
     <view class="paddinghalfrem card-content">
-      <image class='image-profile' mode='aspectfill' src='../../../image/add.png' />
+      <image wx:if="{{drinklab}}" class='image-profile' mode='aspectfill' src='../../../image/add.png' />
+      <image wx:else class='image-profile' mode='aspectfill' src='../../../image/bp.png' />
         <text class='texttitle4'>是否饮酒</text>
     </view>
   </view>
@@ -11,11 +12,11 @@
   <view class="modal-dialog" style='z-index: 99' wx:if="{{showdrink}}">
     <view class="modal-title">是否饮酒</view>
     <view class='paddinghalfrem card-content'>
-      <switch checked='{{drink&1}}' class='weui-cell_switch' bindchange='switch0'/><view class='switch-text'>饮酒</view>
+      <checkbox checked='{{drink&1}}' class='weui-cell_switch' bindchange='switch0'/><view class='switch-text'>饮酒</view>
     </view>
    <view class="modal-footer">
       <view class="btn-cancel" bindtap="onCancel" data-status="cancel">取消</view>
-      <view class="btn-confirm" >确定</view>
+      <view class="btn-confirm" bindtap="confirmdrink">确定</view>
    </view>
   </view>
 
@@ -30,7 +31,7 @@
   <view class="modal-dialog" style='z-index: 99' wx:if="{{showsmoke}}">
     <view class="modal-title">是否吸烟</view>
     <view class='paddinghalfrem card-content'>
-      <switch checked='{{smoke&1}}' class='weui-cell_switch' bindchange='switch0'/><view class='switch-text'>吸烟</view>
+      <checkbox checked='{{smoke&1}}' class='weui-cell_switch' bindchange='switch0'/><view class='switch-text'>吸烟</view>
     </view>
    <view class="modal-footer">
       <view class="btn-cancel" bindtap="onCancel" data-status="cancel">取消</view>
@@ -49,7 +50,7 @@
   <view class="modal-dialog" style='z-index: 99' wx:if="{{showdiabetes}}">
     <view class="modal-title">有无糖尿病</view>
     <view class='paddinghalfrem card-content'>
-      <switch checked='{{diabetes&1}}' class='weui-cell_switch' bindchange='switch0'/><view class='switch-text'>有糖尿病</view>
+      <checkbox checked='{{diabetes&1}}' class='weui-cell_switch' bindchange='switch0'/><view class='switch-text'>有糖尿病</view>
     </view>
    <view class="modal-footer">
       <view class="btn-cancel" bindtap="onCancel" data-status="cancel">取消</view>
